--- a/components/poem.module.css
+++ b/components/poem.module.css
@@ -1,7 +1,7 @@
 .poemContainer {
     display: flex;
     flex-direction: column;
-    justify-content: start;
+    justify-content: flex-start;
     margin-bottom: 8em;
     max-width: 400px;
 }
