--- a/components/layout.module.css
+++ b/components/layout.module.css
@@ -8,3 +8,18 @@
     display: flex;
     flex-direction: column;
 }
+
+.siteTitle {
+    font-size: 2.7rem;
+    line-height: 1.15;
+    font-weight: 800;
+    letter-spacing: -0.05rem;
+    margin: 0;
+    margin-bottom: 1rem;
+}
+
+.siteTitleSmall {
+    font-size: 1.5rem;
+    line-height: 1.4;
+    margin: 1rem 0;
+}
