--- a/components/poem.module.css
+++ b/components/poem.module.css
@@ -2,32 +2,36 @@
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
-    margin-bottom: 8em;
+    margin-bottom: 5em;
     max-width: 400px;
 }
   
 .poemTitle {
-    font-family: 'Times New Roman', Times, serif;
-    font-size: 2.5em;
-    margin-bottom: 0.75em;
+    font-family: 'Lora', serif;
+    font-weight: 500;
+    font-size: 2rem;
+    line-height: 1.4;
+    margin: 1rem 0;
 }
   
 .poemDate {
-    font-family: Arial, sans-serif;
+    /* font-family: Arial, sans-serif; */
     font-size: 1.25em;
     margin-bottom: 0.75em;
+    color: #666;
 }
   
 .poemContent {
-    font-family: Arial, sans-serif;
+    /* font-family: Arial, sans-serif; */
     font-size: 1.5em;
     color: #1c1c1c;
+    font-weight: normal;
 }
   
 .readMoreButton {
-    font-family: Arial, sans-serif;
+    /* font-family: Arial, sans-serif; */
     font-size: 1.25em;
-    color: black;
+    color: #666;
     margin-top: 1em;
     text-decoration: none;
 }  
