--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,17 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:wght@500;700&display=swap');
+
 :root {
   --max-width: 800px;
   --border-radius: 0;
-  --font-serif: 'Times New Roman', Times, serif;
+  --font-serif: 'Lora', serif;
 
   --foreground-rgb: 0, 0, 0;
   --background-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-rgb: 0, 0, 0;
-  }
 }
 
 * {
@@ -35,10 +30,4 @@ body {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
 }
