--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -1,11 +1,3 @@
-.heading2Xl {
-    font-size: 2.5rem;
-    line-height: 1.2;
-    font-weight: 800;
-    letter-spacing: -0.05rem;
-    margin: 1rem 0;
-}
-  
 .headingXl {
     font-size: 2rem;
     line-height: 1.3;
@@ -14,42 +6,14 @@
     margin: 1rem 0;
 }
   
-.headingLg {
-    font-size: 1.5rem;
-    line-height: 1.4;
-    margin: 1rem 0;
-}
-  
-.headingMd {
-    font-size: 1.2rem;
-    line-height: 1.2;
-    margin: 0.25rem 0;
-}
-  
-.borderCircle {
-    border-radius: 9999px;
-}
-  
-.colorInherit {
-    color: inherit;
-}
-  
-.sectionPadding {
-    padding-top: 2rem;
-}
-  
-.list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-}
-  
-.listItem {
-    line-height: 0.75;
-    margin: 0 0 2.5rem;
-}
-  
-.lightText {
-    line-height: 0.75;
+.lightText {    
+    /* font-family: Arial, sans-serif; */
     color: #666;
+    margin: 0.5rem 0;
+}
+
+.body {
+    /* font-family: Arial, sans-serif; */
+    color: #1c1c1c;
+    font-weight: normal;
 }
